--- a/roles/galaxy-docker/tasks/installgenomes.yml
+++ b/roles/galaxy-docker/tasks/installgenomes.yml
@@ -90,6 +90,7 @@
     archive: no #owner and chmod information should not be copied
     recursive: yes
     checksum: yes #when archive is no. Checksum should be yes, otherwise the files are always copied.
+    ssh_args: "{{ansible_ssh_extra_args}}"
   vars:
     ansible_ssh_pipelining: False
 
