--- a/test/group_vars/test/galaxy.settings
+++ b/test/group_vars/test/galaxy.settings
@@ -1,11 +1,13 @@
 #Required settings
 # Please uncomment and specify these values yourself
 
-galaxy_admin_user: "test@test.org"
+galaxy_admin_user: "admin@galaxy.org"
 galaxy_master_api_key: "insecure_test_key9s98d8dy98i212ybkknb"
 galaxy_brand: "test"
 galaxy_report_user: admin
 galaxy_report_password: admin
+
+galaxy_admin_api_key: "admin"
 
 # optional settings
 optional_environment_settings:
