--- a/host_vars/example_host/files.settings
+++ b/host_vars/example_host/files.settings
@@ -4,3 +4,4 @@ backup_db_dir: "{{ inventory_hostname }}/backup_db"
 insert_db_dir: "{{ inventory_hostname }}/insert_db"
 ssh_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/ssh"
 welcome_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/welcome/"
+genomes_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/genomes/"
