--- a/test/group_vars/test/files.settings
+++ b/test/group_vars/test/files.settings
@@ -4,3 +4,4 @@ backup_db_dir: "{{playbook_dir}}/test/files/test/backup_db"
 insert_db_dir: "{{playbook_dir}}/test/files/test//insert_db"
 ssh_dir: "{{playbook_dir}}/test/files/{{ inventory_hostname }}/ssh"
 welcome_dir: "{{playbook_dir}}/test/files/test/welcome/"
+genomes_dir: "{{playbook_dir}}/test/files/test/genomes/"
