included file settings for dbkeys

--- a/test/group_vars/test/files.settings
+++ b/test/group_vars/test/files.settings
@@ -5,3 +5,4 @@ insert_db_dir: "{{playbook_dir}}/test/files/test//insert_db"
 ssh_dir: "{{playbook_dir}}/test/files/{{ inventory_hostname }}/ssh"
 welcome_dir: "{{playbook_dir}}/test/files/test/welcome/"
 genomes_dir: "{{playbook_dir}}/test/files/test/genomes/"
+dbkeys_list_dir: "{{playbook_dir}}/test/files/test/dbkeys/"
