--- a/host_vars/example_host/files.settings
+++ b/host_vars/example_host/files.settings
@@ -5,3 +5,4 @@ insert_db_dir: "{{ inventory_hostname }}/insert_db"
 ssh_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/ssh"
 welcome_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/welcome/"
 genomes_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/genomes/"
+dbkeys_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/dbkeys/"
