--- a/roles/galaxy-docker/tasks/setupsge.yml
+++ b/roles/galaxy-docker/tasks/setupsge.yml
@@ -25,16 +25,16 @@
 #  set_fact:  
 #    optional_environment_settings: "{{optional_environment_settings | combine(galaxy_docker_sge_environment)}}"
 
-- name: Copy sudoers file to export location
-  copy:
-    src: galaxy_sudoers
-    dest: "{{ docker_export_location }}/galaxy_sudoers"
-    mode: 0440
+#- name: Copy sudoers file to export location
+#  copy:
+#    src: galaxy_sudoers
+#    dest: "{{ docker_export_location }}/galaxy_sudoers"
+#    mode: 0440
 
-- name: copy sudo
-  command: "docker exec {{docker_container_name}} {{command}}"
-  vars:
-    command: "cp -p /export/galaxy_sudoers /etc/sudoers.d/galaxy"
+#- name: copy sudo
+#  command: "docker exec {{docker_container_name}} {{command}}"
+#  vars:
+#    command: "cp -p /export/galaxy_sudoers /etc/sudoers.d/galaxy"
 
 - name: restart galaxy
   docker_container:
