--- a/roles/galaxy-docker/tasks/setupsge.yml
+++ b/roles/galaxy-docker/tasks/setupsge.yml
@@ -15,6 +15,7 @@
   file:
     path: "{{docker_export_location}}"
     state: directory
+    owner: "{{container_galaxy_user}}"
 
 - name: create act_qmaster file
   template:
@@ -27,6 +28,7 @@
     image: "{{docker_image}}"
     name: "{{docker_container_name}}"
     state: started
+    user: "{{container_galaxy_user}}"
     command: "python /usr/local/bin/export_user_files.py $PG_DATA_DIR_DEFAULT"
   become_user: "{{docker_user}}"
   become: yes
