--- a/test/vagrant/cluster-test/Vagrantfile
+++ b/test/vagrant/cluster-test/Vagrantfile
@@ -21,7 +21,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   config.vm.network "forwarded_port", guest: 80, host: 8085
-  config.vm.network "forwarded_port", guest: 22, host: 2205
+  config.vm.network "forwarded_port", guest: 22, host: 2205, id: 'ssh'
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
