cluster test settings

--- a/host_vars/example_host/files.settings
+++ b/host_vars/example_host/files.settings
@@ -6,3 +6,4 @@ ssh_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/ssh"
 welcome_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/welcome/"
 genomes_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/genomes/"
 dbkeys_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/dbkeys/"
+docker_custom_image_dir: "files/{{inventory_hostname}}/docker_custom_image/"
