--- a/test/host_vars/cluster-test/files.settings
+++ b/test/host_vars/cluster-test/files.settings
@@ -1,8 +1,9 @@
 
-tool_list_dir: "{{playbook_dir}}/test/files/test/tools/"
-backup_db_dir: "{{playbook_dir}}/test/files/test/backup_db"
-insert_db_dir: "{{playbook_dir}}/test/files/test//insert_db"
+tool_list_dir: "{{playbook_dir}}/test/files/cluster-test/tools/"
+backup_db_dir: "{{playbook_dir}}/test/files/cluster-test/backup_db"
+insert_db_dir: "{{playbook_dir}}/test/files/cluster-test//insert_db"
 ssh_dir: "{{playbook_dir}}/test/files/{{ inventory_hostname }}/ssh"
-welcome_dir: "{{playbook_dir}}/test/files/test/welcome/"
-genomes_dir: "{{playbook_dir}}/test/files/test/genomes/"
-dbkeys_list_dir: "{{playbook_dir}}/test/files/test/dbkeys/"
+welcome_dir: "{{playbook_dir}}/test/files/cluster-test/welcome/"
+genomes_dir: "{{playbook_dir}}/test/files/cluster-test/genomes/"
+dbkeys_list_dir: "{{playbook_dir}}/test/files/cluster-test/dbkeys/"
+docker_custom_image_dir: "{{playbook_dir}}/test/files/cluster-test/docker_custom_image/"
