--- a/test/host_vars/cluster-test/docker.settings
+++ b/test/host_vars/cluster-test/docker.settings
@@ -1,6 +1,10 @@
 docker_default_location: "/data/docker"
-docker_image: "bgruening/galaxy-stable:17.05"
-docker_user: "galaxy"                                           
-docker_export_location: "/data/galaxy/galaxy_storage"  
-docker_container_name: "galaxy"                                 
+docker_image: "cluster-galaxy-stable:17.05"
+docker_user: "galaxy"
+docker_export_location: "/data/galaxy/galaxy_storage"
+docker_container_name: "galaxy"
+docker_cluster_location: "/exports/galaxy"
 
+docker_extra_ports:
+  - "6444:6444"
+  - "6445:6445"
