--- a/test/host_vars/cluster-test/galaxy.settings
+++ b/test/host_vars/cluster-test/galaxy.settings
@@ -15,3 +15,22 @@ optional_environment_settings:
   GALAXY_CONFIG_CONDA_AUTO_INIT: True
   GALAXY_CONFIG_USE_CACHED_DEPENDENCY_MANAGER: True
   NONUSE: proftp
+
+  GALAXY_CONFIG_SANITIZE_ALL_HTML: True
+  GALAXY_LOGGING: full
+  NONUSE: proftp,condor,slurmd,slurmctld
+  SGE_ROOT: /var/lib/gridengine
+  DRMAA_LIBRARY_PATH: /usr/lib/gridengine-drmaa/lib/libdrmaa.so.1.0
+  GALAXY_CONFIG_OUTPUTS_TO_WORKING_DIRECTORY: True
+  GALAXY_CONFIG_RETRY_JOB_OUTPUT_COLLECTION: 5
+  # Set directories to cluster file system
+  GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY: "/exports/galaxy/job_scripts"
+  GALAXY_CONFIG_NEW_FILE_PATH: "/exports/galaxy/tmp"
+  GALAXY_CONFIG_TOOL_DEPENDENCY_DIR: "{{docker_export_location}}/tool_deps"
+  GALAXY_CONFIG_CONDA_PREFIX: "/exports/galaxy/_conda"
+  GALAXY_CONFIG_TOOL_DEPENDENCY_CACHE_DIR: "{{docker_export_location}}/tool_deps/_cache"
+  GALAXY_CONFIG_JOB_WORKING_DIRECTORY: "{{docker_export_location}}/galaxy-central/database/job_working_directory"
+  GALAXY_CONFIG_FILE_PATH: "{{docker_export_location}}/galaxy-central/database/files"
+  GALAXY_CONFIG_TOOL_PATH: "{{docker_export_location}}/galaxy-central/tools"
+  GALAXY_CONFIG_TOOL_DATA_PATH: "{{docker_export_location}}/galaxy-central/tool-data"
+  GALAXY_CONFIG_SHED_TOOL_DATA_PATH: "{{docker_export_location}}/galaxy-central/tool-data"
