--- a/test/host_vars/cluster-test/cluster.settings
+++ b/test/host_vars/cluster-test/cluster.settings
@@ -1,2 +1,3 @@
 galaxy_docker_gridengine_master_host: "ogs-head"
 galaxy_cluster_virtualenv: "/exports/galaxy/galaxy_venv"
+#cluster_embed_metadata_in_job: False
