--- a/host_vars/example_host/docker.settings
+++ b/host_vars/example_host/docker.settings
@@ -1,5 +1,5 @@
 
-docker_default_location: "/data/docker" #Where the docker images are stored
+installdocker_default_location: "/data/docker" #Where the docker images are stored
 docker_image: "bgruening/galaxy-stable:17.01"
 docker_user: "galaxy"
 docker_export_location: "/data/galaxy/galaxy_storage"
