--- a/test/host_vars/cluster-test/docker.settings
+++ b/test/host_vars/cluster-test/docker.settings
@@ -1,4 +1,4 @@
-docker_default_location: "/data/docker"
+installdocker_default_location: "/data/docker"
 docker_image: "cluster-galaxy-stable:17.05"
 docker_user: "galaxy"
 docker_export_location: "{{galaxy_shared_cluster_directory}}/galaxy_storage"
