--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -10,15 +10,20 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 # defaults file for galaxy_docker
-
+galaxy_docker_remote_key_dir: /tmp/keys
 #users
 galaxy_docker_docker_user: galaxy_docker
+galaxy_docker_docker_user_private_key: "{{ssh_dir}}/{{galaxy_docker_docker_user}}.rsa"
+
 galaxy_docker_database_user: postgres
 galaxy_docker_database_user_id: 1550
 galaxy_docker_database_group_id: 1550
+galaxy_docker_database_user_private_key: "{{ssh_dir}}/{{galaxy_docker_database_user}}.rsa"
+
 galaxy_docker_web_user: galaxy
 galaxy_docker_web_user_id: 1450
 galaxy_docker_web_group_id: 1450
+galaxy_docker_web_user_private_key: "{{ssh_dir}}/{{galaxy_docker_web_user}}.rsa"
 
 # docker defaults
 galaxy_docker_docker_user_groups: docker
@@ -51,7 +56,7 @@ fetch_location: "files/{{inventory_hostname}}/database_extract/"
 docker_custom_image_dir: "files/{{inventory_hostname}}/docker_custom_image/"
 docker_build_dir: "/home/{{galaxy_docker_docker_user}}/docker_image/"
 ansible_generated_vars_dir: "/tmp/ansible_generated_vars/"
-
+ssh_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/ssh"
 
 # defaults for addldap
 ldap_defaults:
@@ -132,7 +137,7 @@ new_config_files:
 galaxy_docker_run_unpriviledged: False
 # Run
 galaxy_docker_prepare_docker: true
-galaxy_docker_prerequisites: true
+galaxy_docker_prerequisites: false
 
 galaxy_docker_add_users: True
 galaxy_docker_install_packages: True
