packages in install_packages

--- a/roles/galaxy-docker/tasks/prerequisites/install_packages.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/install_packages.yml
@@ -8,3 +8,14 @@
 # For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+# Installs packages that are later needed by unpriviledged users
+- name: Install rsync
+  package:
+    name: rsync
+    state: present
+
+- name: install git
+  package:
+    name: git
+    state: present
